fixed layout on tablet/desktop screen size with settings/timezone sections

--- a/css/style.css
+++ b/css/style.css
@@ -506,6 +506,23 @@ button {
     display: flex;
     flex-direction: column;
   }
+  .testing-div {
+    /* display: inline-block; */
+    display: flex;
+    justify-content: flex-start;
+  }
+
+  .settings p {
+    padding-top: 5px;
+    margin-bottom: 15px;
+  }
+
+  #testing-switch {
+    margin-left: 250px;
+    /* bottom: 40px; */
+    /* padding-bottom: 50px; */
+    position: absolute;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -513,9 +530,15 @@ button {
   .message {
     grid-column: 1 / span 1;
   }
-  .settings,
+  .settings {
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 11;
+  }
   .timezone {
-    grid-column: 2 / span 1;
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 11;
   }
   .recent-activity {
     grid-column: 2 / span 1;
@@ -561,8 +584,29 @@ button {
   }
   .settings {
     padding-left: 12px;
+    margin-bottom: 40px;
   }
-  .timezone {
-    margin-top: 66px;
+  .testing-div {
+    /* display: inline-block; */
+    display: flex;
+    justify-content: flex-start;
+  }
+
+  .settings p {
+    padding-top: 5px;
+    margin-bottom: 15px;
+  }
+
+  #testing-switch {
+    margin-left: 200px;
+    /* bottom: 40px; */
+    /* padding-bottom: 50px; */
+    position: absolute;
+  }
+
+  .timezone,
+  #timezone {
+    padding-left: 12px;
+    margin-top: 117px;
   }
 }
